--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "swr": "^0.5.6"
   },
   "devDependencies": {
-    "@types/react": "17.0.8",
     "@commitlint/cli": "12.1.4",
     "@commitlint/config-conventional": "12.1.4",
     "@semantic-release/changelog": "5.0.1",
@@ -31,10 +30,12 @@
     "@semantic-release/github": "7.2.3",
     "@semantic-release/npm": "7.1.3",
     "@semantic-release/release-notes-generator": "9.0.2",
-    "eslint": "7.27.0",
+    "@types/react": "17.0.11",
+    "eslint": "7.28.0",
     "husky": "6.0.0",
     "jsinspect": "0.12.7",
-    "prettier": "2.3.0",
+    "normalize.css": "^8.0.1",
+    "prettier": "2.3.1",
     "semantic-release": "17.4.3",
     "typescript": "4.3.2"
   }
