--- a/.github/workflows/deploy-to-github-package.yml
+++ b/.github/workflows/deploy-to-github-package.yml
@@ -14,7 +14,7 @@ jobs:
           fetch-depth: 0
           persist-credentials: false
 
-      - name: Setup NPM Node
+      - name: Setup Node
         uses: actions/setup-node@v1
         with:
           node-version: 14
@@ -32,7 +32,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.PERSIST_GITHUB_TOKEN }}
         run: yarn build && yarn export
 
-      - name: Deploy
+      - name: Deploy Web
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
