--- a/package.json
+++ b/package.json
@@ -19,10 +19,9 @@
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "swr": "^0.5.6"
+    "swr": "0.5.6"
   },
   "devDependencies": {
-    "@types/react": "17.0.8",
     "@commitlint/cli": "12.1.4",
     "@commitlint/config-conventional": "12.1.4",
     "@semantic-release/changelog": "5.0.1",
@@ -31,10 +30,25 @@
     "@semantic-release/github": "7.2.3",
     "@semantic-release/npm": "7.1.3",
     "@semantic-release/release-notes-generator": "9.0.2",
-    "eslint": "7.27.0",
+    "@testing-library/jest-dom": "5.13.0",
+    "@testing-library/react": "11.2.7",
+    "@types/jest": "26.0.23",
+    "@types/react": "17.0.11",
+    "@typescript-eslint/eslint-plugin": "^4.26.1",
+    "@typescript-eslint/parser": "^4.26.1",
+    "eslint": "^7.28.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jest": "^24.3.6",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "6.0.0",
+    "identity-obj-proxy": "3.0.0",
+    "jest": "27.0.4",
     "jsinspect": "0.12.7",
-    "prettier": "2.3.0",
+    "normalize.css": "8.0.1",
+    "prettier": "2.3.1",
     "semantic-release": "17.4.3",
     "typescript": "4.3.2"
   }
