fix: attempt github pages

--- a/.github/workflows/deploy-to-github-package.yml
+++ b/.github/workflows/deploy-to-github-package.yml
@@ -30,6 +30,7 @@ jobs:
       - name: Build Web
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: touch .nojekyll
         run: yarn build && yarn export
 
       - name: Deploy Web
