fix: allow underscore file names

--- a/.github/workflows/deploy-to-github-package.yml
+++ b/.github/workflows/deploy-to-github-package.yml
@@ -27,10 +27,12 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: yarn semantic-release
 
+      - name: Allow Underscore Filenames
+        run: touch .nojekyll
+
       - name: Build Web
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: touch .nojekyll
         run: yarn build && yarn export
 
       - name: Deploy Web
