--- a/.github/workflows/deploy-to-github-package.yml
+++ b/.github/workflows/deploy-to-github-package.yml
@@ -27,13 +27,14 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: yarn semantic-release
 
-      - name: Build Web
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: touch .nojekyll && yarn build && yarn export
-
-      - name: Deploy Web
-        uses: peaceiris/actions-gh-pages@v3
+      - name: Setup Github
+        uses: actions/setup-node@v1
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./out
+          node-version: 14
+          registry-url: https://npm.pkg.github.com/
+          scope: '@ethanneff'
+
+      - name: Deploy to Github Packages
+        run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
