--- a/.github/workflows/validate-lint-test.yml
+++ b/.github/workflows/validate-lint-test.yml
@@ -10,7 +10,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install modules
-        run: yarn install --frozen-lockfile
+        run: yarn ci-install
 
       - name: Run lint
         run: yarn ci-lint
