fix: separate dupe and prettier

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "test": "jest -u --coverage --config .github/jest.config.js",
     "watch": "jest -u --watchAll --config .github/jest.config.js",
     "prepare": "husky install",
-    "ci-prettify": "prettier --write . && jsinspect ./src",
+    "ci-prettify": "prettier --write .",
+    "ci-dupe": "jsinspect ./src",
     "ci-install": "yarn install --frozen-lockfile",
     "ci-build": "touch .nojekyll && yarn build && yarn export",
     "ci-lint": "tsc && eslint '**/*.[jt]s?(x)' --cache --max-warnings=0",
