fix: add caching to tests

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "export": "next export",
     "start": "next start -p 3333",
     "lint": "tsc && eslint '**/*.[jt]s?(x)' --cache --fix --max-warnings=0",
-    "test": "jest -u --coverage --config .github/jest.config.js",
-    "watch": "jest -u --watchAll --config .github/jest.config.js",
+    "test": "jest -u --coverage --cache --config .github/jest.config.js",
+    "watch": "jest -u --watchAll --cache --config .github/jest.config.js",
     "prepare": "husky install",
     "ci-prettify": "prettier --write .",
     "ci-dupe": "jsinspect ./src",
