--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "next build",
     "export": "next export",
     "start": "next start -p 3333",
-    "lint": "tsc && eslint '**/*.[jt]s?(x)' --cache --fix --max-warnings=0",
+    "lint": "next lint && tsc && eslint '**/*.[jt]s?(x)' --cache --fix --max-warnings=0",
     "test": "jest -u --coverage --cache --config .github/jest.config.js",
     "watch": "jest -u --watchAll --cache --config .github/jest.config.js",
     "prepare": "husky install",
@@ -24,7 +24,7 @@
     "ci-release": "semantic-release -e ./.github/release.config.js"
   },
   "dependencies": {
-    "next": "10.2.3",
+    "next": "11.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "swr": "0.5.6"
@@ -38,14 +38,15 @@
     "@semantic-release/github": "7.2.3",
     "@semantic-release/npm": "7.1.3",
     "@semantic-release/release-notes-generator": "9.0.3",
-    "@testing-library/jest-dom": "5.13.0",
+    "@testing-library/jest-dom": "5.14.1",
     "@testing-library/react": "11.2.7",
     "@types/jest": "26.0.23",
     "@types/react": "17.0.11",
-    "@typescript-eslint/eslint-plugin": "^4.26.1",
-    "@typescript-eslint/parser": "^4.26.1",
+    "@typescript-eslint/eslint-plugin": "^4.27.0",
+    "@typescript-eslint/parser": "^4.27.0",
     "eslint": "^7.28.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-next": "^11.0.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jest": "^24.3.6",
     "eslint-plugin-jsx-a11y": "^6.4.1",
@@ -57,7 +58,7 @@
     "jsinspect": "0.12.7",
     "normalize.css": "8.0.1",
     "prettier": "2.3.1",
-    "semantic-release": "17.4.3",
+    "semantic-release": "17.4.4",
     "typescript": "4.3.2"
   }
 }
