--- a/.github/workflows/validate-lint-test.yml
+++ b/.github/workflows/validate-lint-test.yml
@@ -19,3 +19,5 @@ jobs:
 
       - name: Run test coverage
         uses: mattallty/jest-github-action@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
