--- a/.github/workflows/validate-lint-test.yml
+++ b/.github/workflows/validate-lint-test.yml
@@ -17,7 +17,10 @@ jobs:
       - name: Run lint
         run: yarn ci-lint
 
-      - name: Run test coverage
-        uses: mattallty/jest-github-action@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Run test
+        run: yarn ci-test
+
+      - name: Run Coverage
+        uses: raulanatol/jest-coverage-comment-action@v1.0.0
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
