--- a/.github/workflows/validate-lint-test.yml
+++ b/.github/workflows/validate-lint-test.yml
@@ -19,8 +19,5 @@ jobs:
       - name: Run lint
         run: yarn ci-lint
 
-      - name: Run test
-        run: yarn ci-test
-
-      - name: Run coverage
-        uses: mattallty/jest-github-action@v1
+      - name: Run test coverage
+        uses: artiomtr/jest-coverage-report-action@v1.3
