--- a/.github/workflows/validate-lint-test.yml
+++ b/.github/workflows/validate-lint-test.yml
@@ -20,6 +20,7 @@ jobs:
         run: yarn ci-lint
 
       - name: Run test coverage
-        uses: artiomtr/jest-coverage-report-action@v1.3
+        uses: ziishaned/jest-reporter-action@v0.1.1
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          test-command: yarn ci-test
