--- a/.github/workflows/validate-lint-test.yml
+++ b/.github/workflows/validate-lint-test.yml
@@ -20,9 +20,9 @@ jobs:
         run: yarn ci-lint
 
       - name: Run test
-        run: yarn ci-test
 
       - name: Run coverage
         uses: dkershner6/jest-coverage-commenter-action@v1
         with:
-          github_token: '${{ secrets.GITHUB_TOKEN }}'
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          test_command: yarn ci-test
