fix: locate config

--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
     "export": "next export",
     "start": "next start -p 3333",
     "lint": "next lint && tsc && eslint '**/*.[jt]s?(x)' --cache --fix --max-warnings=0",
-    "test": "jest -u --coverage --cache --config .github/jest.config.js",
-    "watch": "jest -u --watchAll --cache --config .github/jest.config.js",
+    "test": "jest -u --coverage --cache --config ./.github/jest.config.js",
+    "watch": "jest -u --watchAll --cache --config ./.github/jest.config.js",
     "prepare": "husky install",
     "ci-prettify": "prettier --write .",
     "ci-dupe": "jsinspect ./src",
     "ci-install": "yarn install --frozen-lockfile",
     "ci-build": "touch .nojekyll && yarn build && yarn export",
     "ci-lint": "tsc && eslint '**/*.[jt]s?(x)' --cache --max-warnings=0",
-    "ci-test": "TZ=America/Los_Angeles jest --ci --forceExit --detectOpenHandles --silent --coverage --coverageReporters=text-summary --config .github/jest.config.js",
+    "ci-test": "TZ=America/Los_Angeles jest --ci --forceExit --detectOpenHandles --silent --coverage --coverageReporters=text-summary --config ./.github/jest.config.js",
     "ci-release": "semantic-release -e ./.github/release.config.js"
   },
   "dependencies": {
