--- a/.github/workflows/validate-lint-test.yml
+++ b/.github/workflows/validate-lint-test.yml
@@ -1,10 +1,14 @@
 name: Validate Lint and Test
 
-on: push
+on:
+  pull_request:
+    branches: [main]
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -15,5 +19,5 @@ jobs:
       - name: Run lint
         run: yarn ci-lint
 
-      - name: Run tests
+      - name: Run test
         run: yarn ci-test
