--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
   "search.exclude": {
     "**/node_modules/": true,
     "**/coverage/": true,
-    "**/yarn.lock": true
+    "**/yarn.lock": true,
+    "**/out/": true
   }
 }
