--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@ethanneff/template-web",
   "version": "1.1.9",
+  "description": "A sample web template using NextJS and Typescript.",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/@ethanneff"
   },
