--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ethanneff/template-web",
   "version": "1.2.1",
-  "description": "A sample web template using NextJS and Typescript.",
+  "description": "A sample web template using NextJS and Typescript",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/@ethanneff"
   },
