--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@ethanneff/template-web",
+  "name": "@ethanneff/template-next",
   "version": "1.2.6",
   "description": "A sample web template using NextJS and Typescript",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/@ethanneff"
   },
-  "repository": "https://github.com/ethanneff/template-web",
+  "repository": "https://github.com/ethanneff/template-next",
   "license": "MIT",
   "scripts": {
     "dev": "next dev -p 3333",
